# comfyui-ap-wildcards

./: LICENSE  README.md  __init__.py  pyproject.toml  templates.json
.github/workflows/: publish_action.yml
example_workflow/: AP Wildcards Example.json
nodes/: ap_wildcards.py
web/js/: ap-wildcards.js
wildcards/: example.json
