[project]
name = "ap-wildcards"
description = "AP-Wildcards is a powerful node for ComfyUI that allows using wildcards (random value substitution) in prompts. Supports hierarchical category organization, search, templates, and complex logical constructs."
version = "1.0.0"
license = "MIT" 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]


[project.urls]
Repository = "https://github.com/Snoopick/comfyui-ap-wildcards"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/Snoopick/comfyui-ap-wildcards/wiki"
"Bug Tracker" = "https://github.com/Snoopick/comfyui-ap-wildcards/issues"

[tool.comfy]
PublisherId = "snoopick"
DisplayName = "comfyui-ap-wildcards"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

