[project]
name = "ap-wildcards"
description = "AP-Wildcards is a powerful node for ComfyUI that allows using wildcards (random value substitution) in prompts. Supports hierarchical category organization, search, templates, and complex logical constructs."
version = "1.0.2"
license = "MIT" 

[project.urls]
Repository = "https://github.com/Snoopick/comfyui-ap-wildcards"
Documentation = "https://github.com/Snoopick/comfyui-ap-wildcards/wiki"
"Bug Tracker" = "https://github.com/Snoopick/comfyui-ap-wildcards/issues"

[tool.comfy]
PublisherId = "snoopick"
DisplayName = "comfyui-ap-wildcards"
Icon = ""
includes = [] 
